# devrel_assessment

./: .algokit.toml  README.md  pyproject.toml
.algokit/: .copier-answers.yml
smart_contracts/artifacts/hello_world/: HelloWorld.approval.puya.map  HelloWorld.approval.teal  HelloWorld.arc32.json  hello_world_client.py
smart_contracts/hello_world/: contract.py  deploy_config.py
